# backtesting_framework

./: .gitignore  README.md  pyproject.toml
backtesting_framework/: __init__.py  backtester.py  data_handler.py  result.py  strategy.py
examples/: example_usage.ipynb
examples/strategies/: __init__.py  buy_and_hold.py  mean_reversion.py  moving_average_cross.py
tests/: __init__.py  test_backtester.py  test_multi_asset.py  test_result.py  test_strategy.py
